# game-of-life

./: README.md  package-lock.json  package.json
src/: App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: game.rs  main.rs
src/components/: Canvas.tsx  Settings.tsx
src/utils/: canvas.ts
